# swift-system

./: .bazelrc  .gitignore  .spi.yml  BUILD.bazel  CMakeLists.txt  MODULE.bazel  NNNN-swift-system-io-uring.md  NNNN-system-stat.md  Package.resolved  Package.swift  Package@swift-5.9.swift  README.md
.github/: CODEOWNERS
.github/workflows/: pull_request.yml
.swiftci/: 5_10_ubuntu2204  5_7_ubuntu2204  5_8_ubuntu2204  5_9_ubuntu2204  nightly_6_0_macos  nightly_6_0_ubuntu2204  nightly_main_macos  nightly_main_ubuntu2204  nightly_main_windows
Documentation/: PlatformSupport.md  system-string.md
Proposals/: 0006-system-stat.md  0007-FileDescriptor-dup3-pipe2.md  0008-backdeploy-cinterop-stat.md  NNNN-backdeploy-cinterop-stat.md  NNNN-system-statfs.md
Sources/: CMakeLists.txt
Sources/CSystem/: CMakeLists.txt  module.modulemap  shims.c
Sources/CSystem/include/: CSystemDarwin.h  CSystemFreeBSD.h  CSystemLinux.h  CSystemShared.h  CSystemWASI.h  CSystemWindows.h  io_uring.h  module.modulemap
Sources/CodeGen/: CodeGenPlatformConstants.swift
Sources/RunCodeGen/: main.swift
Sources/Samples/: Connect.swift  Listen.swift  PasswordReader.swift  RawMode.swift  Resolve.swift  ReverseResolve.swift  TerminalSize.swift  Util.swift  main.swift
Sources/System/: AsyncFileDescriptor.swift  CMakeLists.txt  DarwinPlatformConstants.swift  Errno.swift  ErrnoWindows.swift  FileControl.swift  FileControlCommand.swift  FileControlRaw.swift  FileControlTypes.swift  FileDescriptor.swift  FileDescriptorSet.swift  FileEvent.swift  FileHelpers.swift  FileLock.swift  FileOperations.swift  FilePath.swift  FilePathComponents.swift  FilePermissions.swift  IOCompletion.swift  IORequest.swift  IORing.swift  IORingError.swift  IORingFileSlot.swift  InternetProtocol.swift  Limits.swift  LinuxPlatformConstants.swift  Lock.swift  MachPort.swift  ManagedIORing.swift  Platform.swift  PlatformString.swift  ProcessID.swift  RawIORequest.swift  SystemString.swift  TimeSpecification.swift  Util+StringArray.swift  Util.swift  UtilConsumers.swift  WinSDK+Overlay.swift
Sources/System/FilePath/: FilePath.swift  FilePathAnchor.swift  FilePathCompatInternals.swift  FilePathComponent.swift  FilePathComponentCompat.swift  FilePathComponentView.swift  FilePathComponents.swift  FilePathConformances.swift  FilePathParsing.swift  FilePathString.swift  FilePathStringBridging.swift  FilePathSyntax.swift  FilePathTemp.swift  FilePathTempPosix.swift  FilePathTempWindows.swift  FilePathWindows.swift  SystemStringShim.swift
Sources/System/FileStatus/: FileFlags.swift  FilePermissions.swift  FileStatus.swift  FileStatusOperations.swift  FileType.swift
Sources/System/FileStatus/FileMode/: FileMode.swift  FileModeOther.swift  FileType.swift
Sources/System/FileSystem/: FileFlags.swift  FileMode.swift  FileType.swift  Identifiers.swift  MountFlags.swift  Stat.swift  StatFS.swift
Sources/System/IORing/: IOCompletion.swift  IORequest.swift  IORing+Util.swift  IORing.swift  PollEvents.swift  RawIORequest.swift
Sources/System/InputOutput/: IOControl.swift  IODirection.swift  IOOperations.swift  IOType.swift  TerminalIO.swift
Sources/System/Internals/: CInternetAddress.swift  CInterop.swift  CSocketAddress.swift  Compatibility.swift  Constants.swift  Exports.swift  IOCTL.swift  Mocking.swift  NetworkOrder.swift  RawBuffer.swift  Syscalls.swift  WindowsSyscallAdapters.swift
Sources/System/Platform/: Platform.swift  PlatformString.swift  WindowsPlatformConstants.swift
Sources/System/Process/: ProcessID.swift  ResourceUsageInfo.swift  Signal.swift  SignalSet.swift  TaskInfo.swift
Sources/System/Signal/: Signal+CInterop.swift  Signal+Constants.swift  Signal.swift  SignalSet.swift
Sources/System/Socket/: MessageFlags.swift  Poll.swift  SocketAddress.swift  SocketAddressFamily.swift  SocketFlags.swift  SocketOperations.swift  SocketOption.swift  SocketOptionID.swift  SocketOptionLevel.swift  SocketProtocol.swift  SocketType.swift
Sources/System/Sockets/: SocketAddress+Family.swift  SocketAddress+IPv4.swift  SocketAddress+IPv6.swift  SocketAddress+Local.swift  SocketAddress+Resolution.swift  SocketAddress.swift  SocketDescriptor+Messages.swift  SocketDescriptor.swift  SocketHelpers.swift  SocketMessages.swift  SocketOperations.swift  SocketOptions.swift
Sources/System/Stat/: FCTRL.swift  FileMode.swift  FilePath+Stat.swift  FileStatus.swift  FileStatusOperations.swift  Stat+CInterop.swift  Stat+Constants.swift  Stat+Syscalls.swift  Stat.swift
Sources/System/Stat/Operations/: FileDescriptor+StatOperations.swift  FileMode+StatOperations.swift  FilePath+StatOperations.swift
Sources/System/SystemFilePath/: FilePathCompatInternals.swift  FilePathCompatShims.swift  FilePathComponentCompat.swift  FilePathComponents.swift  FilePathConformances.swift  FilePathString.swift  FilePathSyntax.swift  FilePathTemp.swift  FilePathTempPosix.swift  FilePathTempWindows.swift  SystemStringShim.swift
Sources/System/Terminal/: BaudRate.swift  ControlCharacters.swift  TerminalAttributes+Serial.swift  TerminalAttributes.swift  TerminalDescriptor.swift  TerminalFlags.swift  TerminalOperations.swift  TerminalWindowSize.swift
Sources/System/Time/: Clock.swift  IntervalTimer.swift  IntervalTimerValue.swift  Microseconds.swift  Nanoseconds.swift  ProcessorTime.swift  Time+CInterop.swift  Time+Constants.swift  Time+Syscalls.swift  Time.swift  TimeComponents.swift  TimeInterval.swift  TimeIntervalMicroseconds.swift  TimeIntervalNanoseconds.swift  TimeSpecification.swift  TimeValue.swift
Sources/System/autogenerated/: DarwinPlatformConstants.swift
Sources/SystemCompatibilityAdaptors/: CompatibilityAdaptors.swift
Sources/SystemInternals/: Exports.swift  Mocking.swift  Syscalls.swift  WindowsSyscallAdapters.swift
Sources/SystemSockets/: Backcompat.swift  CInterop.swift  NetworkOrder.swift  RawBuffer.swift  Syscalls.swift  Util.swift
Tests/: LinuxMain.swift
Tests/CodeGenTests/: CodeGenTests.swift  XCTestManifests.swift
Tests/MemberImportVisibility/: Probe.swift
Utilities/: expand-availability.py  generate-constants.swift
(+67 files in other folders)
